--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       #   - "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
       # Web Admin Port
       - "8061:80/tcp"
+      - "4443:443/tcp"
 
     # See the list of environment variables at https://github.com/pi-hole/docker-pi-hole/#environment-variables
     environment:
