Add other DNS providers
Adds (2) Quad9 options to Cloudflare and switches default to Quad9 filtered with DNSSEC support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,12 @@ services:
 
     # See the list of environment variables at https://github.com/cloudflare/cloudflared/blob/master/cmd/cloudflared/proxydns/cmd.go
     environment:
-      TUNNEL_DNS_UPSTREAM: "https://1.0.0.1/dns-query,https://1.1.1.1/dns-query"
+      # Cloudflare DoH
+      # TUNNEL_DNS_UPSTREAM: "https://1.0.0.1/dns-query,https://1.1.1.1/dns-query"
+      # Quad9 DoH (Filtered, DNSSEC)
+      TUNNEL_DNS_UPSTREAM: "https://dns.quad9.net/dns-query"
+      # Quad9 DoH (Filtered, DNSSEC, ECS)
+      # TUNNEL_DNS_UPSTREAM: "https://dns11.quad9.net/dns-query"
       # Listen on an unprivileged port
       TUNNEL_DNS_PORT: 5053
       # Listen on all interfaces
